cmake_minimum_required(VERSION 3.16.3)
project(xenonframe)

set(CMAKE_CXX_STANDARD 14)

include_directories(src)
include_directories(src/xactor)
include_directories(src/xasync)
include_directories(src/xcoroutine)
include_directories(src/xhttp_client)
include_directories(src/xhttp_client/detail)
include_directories(src/xhttp_server)
include_directories(src/xhttp_server/detail)
include_directories(src/xhttp_server/middleware)
include_directories(src/xhttp_server/middleware/async)
include_directories(src/xhttp_server/middleware/redis_session)
include_directories(src/xhttper)
include_directories(src/xjson)
include_directories(src/xlog)
include_directories(src/xmqtt)
include_directories(src/xmqtt/detail)
include_directories(src/xnet)
include_directories(src/xnet/detail)
include_directories(src/xraft)
include_directories(src/xraft/detail)
include_directories(src/xredis)
include_directories(src/xredis/detail)
include_directories(src/xsimple_rpc)
include_directories(src/xsimple_rpc/detail)
include_directories(src/xsocket.io)
include_directories(src/xsocket.io/detail)
include_directories(src/xtest)
include_directories(src/xutil)
include_directories(src/xutil/detail)
include_directories(src/xwebsocket)

add_executable(threadpool examples/threadpool/threadpool_test.cpp)
add_executable(xnet_server examples/xnet/server/server.cpp)
add_executable(xnet_client examples/xnet/client/client.cpp)

target_link_libraries(threadpool pthread)
